feat(DF-744): Added another task to clean any configuration before launching git commands

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -74,6 +74,9 @@ stages:
 
     - checkout: nm-factory-inf-pip-operations
 
+    - checkout: self
+      clean: true
+
     - task: Bash@3
       displayName: "Checking that the mail is correct"
       inputs:
