feat(DF-744): Removed repositories folders to prevent git clone command failure

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -78,6 +78,14 @@ stages:
       clean: true
 
     - task: Bash@3
+      displayName: "Remove local repositories"
+      inputs:
+        targetType: inline
+        script: |
+          rm -fR nm-factory-inf-env-pro
+          rm -fR nm-factory-inf-env-azdevops
+
+    - task: Bash@3
       displayName: "Checking that the mail is correct"
       inputs:
         targetType: inline
