--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -74,6 +74,17 @@ stages:
 
     - checkout: nm-factory-inf-pip-operations
 
+    - checkout: self
+      clean: true
+
+    - task: Bash@3
+      displayName: "Remove local repositories"
+      inputs:
+        targetType: inline
+        script: |
+          rm -fR nm-factory-inf-env-pro
+          rm -fR nm-factory-inf-env-azdevops
+
     - task: Bash@3
       displayName: "Checking that the mail is correct"
       inputs:
