feat(DF-744): Added a condition to some steps and reorder the steps to be executed

--- a/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
+++ b/adding-azure-user/nm-factory-inf-pip-operation-adding-user-to-azure.yml
@@ -348,40 +348,12 @@ stages:
         inlineScript: |
           bash nm-factory-inf-pip-operations/adding-azure-user/scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
-    - task: AzureCLI@2
-      displayName: "Merging with main branch at repository ${{ variables.AZUREREPO }}" 
-      env:
-        ARM_CLIENT_ID: $(terraform-app-client-id)
-        ARM_CLIENT_SECRET: $(terraform-app-secret)
-        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
-      inputs:
-        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREREPO }} ${{ parameters.branch }}
-
-    - task: Bash@3
-      displayName: "Checking if it is needed to add Azure license"
-      inputs:
-        targetType: inline
-        script: |
-          #!/bin/bash
-
-          echo "Checking that mail needs to have an Azure license"
-          if [[ ${{ parameters.option }} == dplt_pipeline ]] || [[ ${{ parameters.option }} == avitech_slovakia ]] || [[ ${{ parameters.option }} == remove_user ]] || [[ ${{ parameters.option }} == infra_admin ]] || [[ ${{ parameters.option }} == support_contrib ]]
-          then
-            echo "Option includes Azure Devops License addition"
-          else
-            echo "Mail does not need to be added to Azure Devops"
-            exit 1
-          fi  
-
     - checkout: nm-factory-inf-env-azdevops
       clean: true          
 
     - task: Bash@3
       displayName: "Config git user to proceed with commit"
+      condition: or(eq(${{ parameters.option }},dplt_pipeline),eq(${{ parameters.option }},avitech_slovakia),eq(${{ parameters.option }},remove_user),eq(${{ parameters.option }},infra_admin),eq(${{ parameters.option }},support_contrib))     
       inputs:
         targetType: inline
         script: |
@@ -390,6 +362,7 @@ stages:
 
     - task: AzureCLI@2
       displayName: "Added user license for Azure Devops" 
+      condition: or(eq(${{ parameters.option }},dplt_pipeline),eq(${{ parameters.option }},avitech_slovakia),eq(${{ parameters.option }},remove_user),eq(${{ parameters.option }},infra_admin),eq(${{ parameters.option }},support_contrib))     
       env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
@@ -501,6 +474,7 @@ stages:
 
     - task: AzureCLI@2
       displayName: "Pull Request creation for ${{ variables.AZUREDEVOPSREPO }} repository" 
+      condition: or(eq(${{ parameters.option }},dplt_pipeline),eq(${{ parameters.option }},avitech_slovakia),eq(${{ parameters.option }},remove_user),eq(${{ parameters.option }},infra_admin),eq(${{ parameters.option }},support_contrib))     
       env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
@@ -513,7 +487,21 @@ stages:
           bash nm-factory-inf-pip-operations/adding-azure-user/scripts/creating-pr.sh $(System.AccessToken) ${{ variables.AZUREDEVOPSREPO }} ${{ parameters.branch }} ${{ variables.REVIEWERS }}
 
     - task: AzureCLI@2
+      displayName: "Merging with main branch at repository ${{ variables.AZUREREPO }}" 
+      env:
+        ARM_CLIENT_ID: $(terraform-app-client-id)
+        ARM_CLIENT_SECRET: $(terraform-app-secret)
+        ARM_TENANT_ID: "9e296acd-1e44-44f0-8c77-cc9dbce85489"  #Must move to KeyVault or inside provider.tf
+      inputs:
+        azureSubscription: 'ecl-az-fact-svc-01-armconnection'
+        scriptType: 'bash'
+        scriptLocation: 'inlineScript'
+        inlineScript: |
+          bash nm-factory-inf-pip-operations/adding-azure-user/scripts/approve-pr.sh $(mypat) ${{ variables.AZUREREPO }} ${{ parameters.branch }}
+
+    - task: AzureCLI@2
       displayName: "Merging with main branch at repository ${{ variables.AZUREDEVOPSREPO }}" 
+      condition: or(eq(${{ parameters.option }},dplt_pipeline),eq(${{ parameters.option }},avitech_slovakia),eq(${{ parameters.option }},remove_user),eq(${{ parameters.option }},infra_admin),eq(${{ parameters.option }},support_contrib))     
       env:
         ARM_CLIENT_ID: $(terraform-app-client-id)
         ARM_CLIENT_SECRET: $(terraform-app-secret)
